Create base.html template

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cookable - Recipe Manager</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
+
+    <h2>Base Template extension</h2>
+
     {% for recipe in recipes %}
         {{ recipe.category_name }}<br>
         {{ recipe.recipe_name }}<br>
@@ -19,5 +16,5 @@
         {{ recipe.gluten_free }}<br>
         {{ recipe.image }}<br>
     {% endfor %}
-</body>
-</html>
+
+{% endblock %}
