--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cookable - Recipe Manager</title>
+    <link rel="shortcut icon" type="image/png" href="static/images/favicon.ico"/>
 </head>
 <body>
 
