--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,36 @@
 </head>
 <body>
 
-    <h1>Base Template</h1>
+    <header>
+        <!-- Desktop Top Navbar -->
+        <nav class="nav-extended">
+            <div class="nav-wrapper">
+                <a href="#!" class="brand-logo">Logo</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="#">Recipes</a></li>
+                    <li><a href="#">My Recipes</a></li>
+                    <li><a href="#">Add Recipe</a></li>
+                    <li><a href="#">Categories</a></li>
+                    <li><a href="#">Log in</a></li>
+                    <li><a href="#">Log out</a></li>
+                    <li><a href="#">Sign up</a></li>
+                </ul>
+            </div>
+        </nav>
+        
+        <!-- Mobile Side Navbar -->
+        <ul class="sidenav" id="mobile-demo">
+            <li><a href="#">Recipes</a></li>
+            <li><a href="#">My Recipes</a></li>
+            <li><a href="#">Add Recipe</a></li>
+            <li><a href="#">Categories</a></li>
+            <li><a href="#">Log in</a></li>
+            <li><a href="#">Log out</a></li>
+            <li><a href="#">Sign up</a></li>
+        </ul>
+    </header>
+
     {% block content %}
     {% endblock %}
 
