--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;0,800;1,400;1,500;1,700;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block styles %}
@@ -18,16 +19,18 @@
         <!-- Desktop Top Navbar -->
         <nav class="nav-extended">
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Logo</a>
+                <a href="#!" class="brand-logo">
+                    <img src="{{ url_for('static', filename='images/cookablelogo-(colour reversed).png') }}" class="logo">
+                </a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#">Recipes</a></li>
                     <li><a href="#">My Recipes</a></li>
                     <li><a href="#">Add Recipe</a></li>
                     <li><a href="#">Categories</a></li>
-                    <li><a href="#">Log in</a></li>
                     <li><a href="#">Log out</a></li>
-                    <li><a href="#">Sign up</a></li>
+                    <li><a class="button-signup" href="#">Sign up</a></li>
+                    <li><a class="button-login" href="#">Log in</a></li>
                 </ul>
             </div>
         </nav>
@@ -38,9 +41,9 @@
             <li><a href="#">My Recipes</a></li>
             <li><a href="#">Add Recipe</a></li>
             <li><a href="#">Categories</a></li>
-            <li><a href="#">Log in</a></li>
             <li><a href="#">Log out</a></li>
             <li><a href="#">Sign up</a></li>
+            <li><a href="#">Log in</a></li>
         </ul>
     </header>
 
