FEAT: Add Sign Up template

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     <li><a href="#">Add Recipe</a></li>
                     <li><a href="#">Categories</a></li>
                     <li><a href="#">Log out</a></li>
-                    <li><a class="button-signup" href="#">Sign up</a></li>
+                    <li><a class="button-signup" href="{{ url_for('signup') }}">Sign up</a></li>
                     <li><a class="button-login" href="#">Log in</a></li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
             <li><a href="#">Add Recipe</a></li>
             <li><a href="#">Categories</a></li>
             <li><a href="#">Log out</a></li>
-            <li><a href="#">Sign up</a></li>
+            <li><a href="{{ url_for('signup') }}">Sign up</a></li>
             <li><a href="#">Log in</a></li>
         </ul>
     </header>
