--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,8 @@ nav {
     vertical-align: middle;
 }
 
+/* Sign up*/
+
 .button-signup{
     border: 2px solid #fff;
     border-radius: 10px;
@@ -49,6 +51,20 @@ nav {
     background-color: #244846;
     color: #fff
 }
+
+
+/* Flash messages */
+
+.flash-messages {
+    background-color: #d0ccb4;
+    margin: auto;
+    margin-top: 10px;
+    padding: 15px 0px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-align: center;
+}
+
 
 /* Media queries */
 
