--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,11 +4,11 @@
 <h3 class="center-align margin-top-fifty"><span>Sign up</span></h3>
 
 <div class="row background-grey-ddd margin-top-fifty padding-top-twentyfive padding-bottom-twentyfive">
-    <form class="col s12 m6 offset-m3" method="POST" action="{{ url_for('signup') }}">
+    <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('signup') }}">
         <!-- Username -->
         <div class="row">
-            <p class="input-title">Username<span> (a-z, A-Z, 0-9 and max 15 characters)</span></p>
-            <div class="input-field col s12 input-space">
+            <p class="input-title col s10 offset-s1">Username<span> (a-z, A-Z, 0-9 and max 15 characters)</span></p>
+            <div class="input-field col s10 offset-s1 input-space">
                 <input id="username" name="username" type="text" minlength="5"
                     maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                 <label for="username">Enter username...</label>
@@ -16,8 +16,8 @@
         </div>
         <!-- Password -->
         <div class="row">
-            <p class="input-title">Password<span> (a-z, A-Z, 0-9 and max 15 characters)</span></p>
-            <div class="input-field col s12 input-space">
+            <p class="input-title col s10 offset-s1">Password<span> (a-z, A-Z, 0-9 and max 15 characters)</span></p>
+            <div class="input-field col s10 offset-s1 input-space">
                 <input id="password" name="password" type="password" minlength="5"
                     maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                 <label for="password">Enter password...</label>
@@ -25,8 +25,8 @@
         </div>
         <!-- Confirm Password -->
         <div class="row">
-            <p class="input-title">Confirm Password</p>
-            <div class="input-field col s12 input-space">
+            <p class="input-title col s10 offset-s1">Confirm Password</p>
+            <div class="input-field col s10 offset-s1 input-space">
                 <input id="confirm_password" name="confirm_password" type="password" minlength="5"
                     maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
                 <label for="confirm_password">Confirm Password...</label>
@@ -34,9 +34,10 @@
         </div>
         <!-- Sign Up Button -->
         <div class="row margin-top-fifty">
-            <button type="submit" class="col s8 offset-s2">Sign up</button>
+            <button type="submit" class="col s6 offset-s3 green-button-full">Sign up</button>
         </div>
     </form>
   </div>
+  <p class="center-align">Already have an account? <a href="#" class="click-here">Click here.</a></p>
 
 {% endblock %}
