--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         <nav class="nav-extended">
             <div class="nav-wrapper">
                 <a href="#!" class="brand-logo">
-                    <img src="{{ url_for('static', filename='images/cookablelogo-(colour reversed).png') }}" class="logo">
+                    <img src="{{ url_for('static', filename='images/cookablelogo-(colour reversed).png') }}" class="logo" alt="Cookable logo">
                 </a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
