--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;0,800;1,400;1,500;1,700;1,800&&family=Zilla+Slab:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;1,400;1,500;1,700;1,800&&family=Zilla+Slab:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     {% block styles %}
@@ -60,11 +60,39 @@
         {% endwith %}
     </section>
 
+    <!-- main section -->
     <main class="container">
         {% block content %}
         {% endblock %}
     </main>
 
+    <!-- footer -->
+
+    <footer class="row center-align margin-top-fifty">
+        <div class="col s12">
+            <img src="{{ url_for('static', filename='images/cookablelogo-(white).png') }}" class="logo-footer margin-top-fifty margin-bottom-twentyfive" alt="Cookable logo">
+            <div class="row center-align">
+                <div class="col s8 offset-s2 l4 offset-l1 margin-bottom-twentyfive margin-top-twentyfive">
+                    <h4><span>Get in touch</span></h4>
+                    <p class="footer-par">
+                        We’d love to hear from you.
+                        Simply fill in our online contact form or jump onto Facebook,
+                        Pinterest or Twitter to learn more.
+                        <a href="#">Get in touch.</a>
+                    </p>
+                </div>
+                <div class="col s8 offset-s2 l4 offset-l1 margin-bottom-twentyfive margin-top-twentyfive">
+                    <h4><span>Stay in touch</span></h4>
+                    <a href="https://www.facebook.com" target="_blank"><i class="social fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com" target="_blank"><i class="social fab fa-twitter"></i></a>
+                    <a href="https://www.pinterest.ie" target="_blank"><i class="social fab fa-pinterest"></i></a>
+                </div>
+            </div>
+            <p class="developed-by">Developed by Lukasz Pasich</p>
+        </div>
+    </footer>
+
+    <!-- scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
