--- a/templates/landing.html
+++ b/templates/landing.html
@@ -9,11 +9,29 @@
             <img src="{{ url_for('static', filename='images/landing-banner-desktop.jpg') }}" alt="Cookable - Landing page banner">
         </div>
     </div>
+    <div class="section white">
+        <div class="row container">
+            <h3 class="center-align margin-bottom-fifty"><span>Ready to get started?</span></h3>
+            <p class="col s12 m10 offset-m1 margin-bottom-fifty par-landing-ready">Cookable is your very own personal recipe organiser.
+                Save your favourite recipes from websites, magazines, recipe books or simply those from your head,
+                all in one place, accessible on all of your devices, anytime.
+                Quickly search for recipes uploaded by other users to discover new culinary frontiers.
+                Featuring, a simple and clean interface, Cookable is the perfect cooking companion.</p>
+        </div>
+    </div>
+    <div class="parallax-container ad-full-desktop">
+        <div class="parallax">
+            <img src="{{ url_for('static', filename='images/schmickser-ad-1920px.jpg') }}" alt="Schmickser mixer ad">
+        </div>
+    </div>
+    <div class="parallax-container ad-full-mobile">
+        <div class="parallax">
+            <img src="{{ url_for('static', filename='images/schmickser-ad-1000px.jpg') }}" alt="Schmickser mixer ad">
+        </div>
+    </div>
+
+
 {% endblock %}
 
 {% block content %}
-
-<h3 class="center-align margin-top-fifty"><span>Ready to get started?</span></h3>
-
-
 {% endblock %}
