--- a/templates/landing.html
+++ b/templates/landing.html
@@ -29,9 +29,20 @@
             <img src="{{ url_for('static', filename='images/schmickser-ad-1000px.jpg') }}" alt="Schmickser mixer ad">
         </div>
     </div>
-
-
 {% endblock %}
 
 {% block content %}
+    <div class="row container center-align">
+        <h3 class="margin-top-hundred margin-bottom-fifty"><span>Latest recipes</span></h3>
+
+        <div class="col s10 m5 l3 offset-l1 testclass">
+        </div>
+        <div class="col s10 offset-s1 m5 offset-m1 l3 testclass">
+        </div>
+        <div class="col s10 offset-s1 m5 offset-m1 l3 testclass">
+        </div>
+
+        <div class="col s12 white-panel">
+        </div>
+    </div>
 {% endblock %}
