STYLE: Latest recipes links on Landing page

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,6 +71,10 @@
     </main>
 
     <!-- footer -->
+    <div>
+        {% block overfooter %}
+        {% endblock %}
+    </div>
 
     <footer class="row center-align margin-top-fifty">
         <div class="col s12">
