--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,10 @@
     margin-top: 100px;
 }
 
+.margin-top-minusfifty {
+    margin-top: -50px;
+}
+
 .margin-bottom-fifty {
     margin-bottom: 50px;
 }
@@ -39,6 +43,9 @@
     background-color: #ddd;
 }
 
+.display-inline-block {
+    display: inline-block;
+}
 
 /* General */
 
@@ -213,7 +220,7 @@ h4 span {
 }
 
 .button-banner-signup {
-    border: 2px solid #244846;
+    border: 3px solid #244846;
     margin-top: 10px;
     background-color: rgba(255,255,255,0.25);
     color: #244846;
@@ -249,10 +256,45 @@ h4 span {
 
 .white-panel {
     background-color: #fff;
-    height: 100px;
-    box-shadow: 0px -10px 7px rgba(99, 99, 99, .25);
+    height: 50px;
+    width: 100%;
+    box-shadow: 0px -8px 8px rgba(99, 99, 99, .3);
     margin-top: -20px;
+    position: relative;
+    z-index: 1;
 }
+
+/* ----- CODE CREDIT ----- */
+/* https://www.w3schools.com/howto/howto_css_image_overlay_title.asp */
+
+.overlay-container {
+    position: relative;
+    width: 100%;
+    max-width: 300px;
+    display: inline-block;
+    margin: 0px 15px;
+}
+
+.overlayed-image {
+    width: 320px;
+    height: auto;
+}
+
+.overlay {
+    position: absolute; 
+    top: 0; 
+    background: rgba(0, 0, 0, 0.5);
+    width: 320px;
+    height: 145px;
+    transition: .5s ease;
+    opacity:0;
+}
+
+.overlay-container:hover .overlay {
+  opacity: 1;
+}
+
+/* ----- END OF CODE CREDIT ----- */
 
 
 /* Sign up page */
@@ -355,10 +397,4 @@ h4 span {
     .par-landing-ready {
         margin-top: -25px;
     }
-}
-
-.testclass {
-    background-color: red;
-    height: 100px;
-    margin: 0px 10px;
 }
