--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 </a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#">Recipes</a></li>
+                    <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
                     <li><a href="#">My Recipes</a></li>
                     <li><a href="#">Add Recipe</a></li>
                     <li><a href="#">Categories</a></li>
