FEAT: Add Login template

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -38,6 +38,6 @@
         </div>
     </form>
   </div>
-  <p class="center-align">Already have an account? <a href="#" class="click-here">Click here.</a></p>
+  <p class="center-align">Already have an account? <a href="{{ url_for('login') }}" class="click-here">Click here.</a></p>
 
 {% endblock %}
