--- a/templates/base.html
+++ b/templates/base.html
@@ -30,20 +30,20 @@
                     <li><a href="#">Categories</a></li>
                     <li><a href="#">Log out</a></li>
                     <li><a class="button-signup" href="{{ url_for('signup') }}">Sign up</a></li>
-                    <li><a class="button-login" href="#">Log in</a></li>
+                    <li><a class="button-login" href="{{ url_for('login') }}">Log in</a></li>
                 </ul>
             </div>
         </nav>
         
         <!-- Mobile Side Navbar -->
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="#">Recipes</a></li>
+            <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
             <li><a href="#">My Recipes</a></li>
             <li><a href="#">Add Recipe</a></li>
             <li><a href="#">Categories</a></li>
             <li><a href="#">Log out</a></li>
             <li><a href="{{ url_for('signup') }}">Sign up</a></li>
-            <li><a href="#">Log in</a></li>
+            <li><a href="{{ url_for('login') }}">Log in</a></li>
         </ul>
     </header>
 
