--- a/templates/base.html
+++ b/templates/base.html
@@ -25,20 +25,22 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
-                    <li><a href="#">My Recipes</a></li>
+                    <li><a href="{{ url_for('my_recipes') }}">My Recipes</a></li>
                     <li><a href="#">Add Recipe</a></li>
                     <li><a href="#">Categories</a></li>
                     <li><a href="#">Log out</a></li>
                     <li><a class="button-signup" href="{{ url_for('signup') }}">Sign up</a></li>
                     <li><a class="button-login" href="{{ url_for('login') }}">Log in</a></li>
+                    <li>Hi, {{ username }}</li>
                 </ul>
             </div>
         </nav>
         
         <!-- Mobile Side Navbar -->
         <ul class="sidenav" id="mobile-demo">
+            <li>Hi, {{ username }}</li>
             <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
-            <li><a href="#">My Recipes</a></li>
+            <li><a href="{{ url_for('my_recipes') }}">My Recipes</a></li>
             <li><a href="#">Add Recipe</a></li>
             <li><a href="#">Categories</a></li>
             <li><a href="#">Log out</a></li>
