--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                     <li><a href="{{ url_for('my_recipes', username=session['user']) }}">My Recipes</a></li>
                     <li><a href="#">Add Recipe</a></li>
                     <li><a href="#">Categories</a></li>
-                    <li><a href="#">Log out</a></li>
+                    <li><a href="{{ url_for('logout') }}">Log out</a></li>
                     <li><a class="button-signup" href="{{ url_for('signup') }}">Sign up</a></li>
                     <li><a class="button-login" href="{{ url_for('login') }}">Log in</a></li>
                     <li>Hi, {{ username }}</li>
@@ -43,7 +43,7 @@
             <li><a href="{{ url_for('my_recipes', username=session['user']) }}">My Recipes</a></li>
             <li><a href="#">Add Recipe</a></li>
             <li><a href="#">Categories</a></li>
-            <li><a href="#">Log out</a></li>
+            <li><a href="{{ url_for('logout') }}">Log out</a></li>
             <li><a href="{{ url_for('signup') }}">Sign up</a></li>
             <li><a href="{{ url_for('login') }}">Log in</a></li>
         </ul>
