--- a/templates/landing.html
+++ b/templates/landing.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="container center-align"> 
-        <div style="display: inline-block">
+        <div class="display-inline-block">
             <a class="overlay-container" href="{{ url_for('get_recipes') }}">
                 <img class="overlayed-image" src="{{ url_for('static', filename='images/roast-chicken-latest.jpg') }}" alt="Latest recipes">
                 <div class="overlay"></div>
