--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,20 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2>Base Template extension</h2>
+<h3 class="center-align margin-top-fifty"><span>Recipes</span></h3>
 
-    {% for recipe in recipes %}
-        {{ recipe.category_name }}<br>
-        {{ recipe.recipe_name }}<br>
-        {{ recipe.recipe_description }}<br>
-        {{ recipe.serves }}<br>
-        {{ recipe.cooks_in }}<br>
-        {{ recipe.ingredients }}<br>
-        {{ recipe.method }}<br>
-        {{ recipe.vegetarian }}<br>
-        {{ recipe.vegan }}<br>
-        {{ recipe.gluten_free }}<br>
-        {{ recipe.image }}<br>
-    {% endfor %}
+<!-- Search Field -->
+<div class="row margin-top-fifty">
+    <div class="input-field col s10 offset-s1 col m8 offset-m2 input-space">
+        <input id="search" name="search" type="text" maxlength="30">
+        <label for="search">Find recipe by keyword...</label>
+    </div>
+</div>
+
+<!-- Recipe Card -->
+<div class="flex-container margin-top-fifty">
+{% for recipe in recipes %}
+    <div>
+        <a class="recipes-overlay-container" href="{{ url_for('get_recipes') }}">
+            <img class="flex-image" src="{{ recipe.image }}" alt="Recipe">
+            <!-- <img class="flex-image" src="{{ url_for('static', filename='images/roast-chicken.jpg') }}" alt="Recipe"> -->
+            <div class="recipes-overlay"></div>
+            <div class="recipes-title">{{ recipe.recipe_name }}</div>
+        </a>
+    </div>
+{% endfor %}
+</div>
 
 {% endblock %}
