--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                     <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('my_recipes', username=session['user']) }}">My Recipes</a></li>
-                        <li><a href="#">Add Recipe</a></li>
+                        <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
                         <li><a href="#">Categories</a></li>
                         <li><a href="{{ url_for('logout') }}">Log out</a></li>
                         <li>Hi, {{ username }}</li>
@@ -44,7 +44,7 @@
             <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('my_recipes', username=session['user']) }}">My Recipes</a></li>
-                <li><a href="#">Add Recipe</a></li>
+                <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
                 <li><a href="#">Categories</a></li>
                 <li><a href="{{ url_for('logout') }}">Log out</a></li>
             {% else %}
