--- a/templates/myrecipes.html
+++ b/templates/myrecipes.html
@@ -13,7 +13,7 @@
 
 <!-- Add New Recipe button -->
 <div class="row margin-top-fifty">
-    <a href="{{ url_for('signup') }}" class="col s8 offset-s2 m4 offset-m4 button-banner-signup">Add new recipe</a>
+    <a href="{{ url_for('add_recipe') }}" class="col s8 offset-s2 m4 offset-m4 button-banner-signup">Add new recipe</a>
 </div>
 
 <p class="center-align margin-top-hundred">To browse all recipes <a href="{{ url_for('get_recipes') }}" class="click-here">click here.</a></p>
