--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,10 @@
 
 /* Utility Classes */
 
+.margin-top-ten {
+    margin-top: 10px;
+}
+
 .margin-top-twentyfive {
     margin-top: 25px;
 }
@@ -21,6 +25,10 @@
 
 .margin-top-minusfifty {
     margin-top: -50px;
+}
+
+.margin-bottom-twentyfive {
+    margin-bottom: 25px;
 }
 
 .margin-bottom-fifty {
@@ -359,6 +367,26 @@ h4 span {
     font-size: 1.125rem;
     font-weight: 500;
     color: #000;
+}
+
+.stock-images {
+    text-decoration: none;
+    color: #4f807e;
+    font-weight: 600;
+    padding: 5px;
+    border: 1px solid #4f807e;
+    margin: 5px 10px 5px 0px;
+    display: inline-block;
+}
+
+.stock-images:hover {
+    background-color: #4f807e;
+    color: #fff;
+}
+
+.add-recipe-icon {
+    font-size: 1.375rem;
+    padding-right: 5px;
 }
 
 
