--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -3,62 +3,95 @@
 
 <h3 class="center-align margin-top-fifty"><span>Add Recipe</span></h3>
 
-<!-- CODE CREDIT - Materialize Input Fields (modified) -->
+<!-- CODE CREDIT - Materialize Input Fields (but significantly customised) -->
 <!-- https://materializecss.com/text-inputs.html -->
 
 <!-- Form -->
 <div class="row margin-top-seventyfive">
     <form class="col s12 m10 offset-m1 l8 offset-l2" method="POST" action="">
 
-        <!-- Recipe name -->
-        <div class="row">
-            <label class="add-recipe-label" for="recipe_name">Recipe Name</label>
+         <!-- Recipe category -->
+         <div class="row">
+            <label class="add-recipe-label" for="category_name"><i class="fas fa-folder add-recipe-icon"></i> Recipe Category:</label>
             <div class="input-field col s12">
-                <input placeholder="(max 40 characters)" id="recipe_name" type="text" maxlength="40" class="validate">
+                <select id="category_name" name="category_name" class="validate" required>
+                    <option value="" disabled selected></i> Choose Category</option>
+                    <option value="1">Option 1</option>
+                    <option value="2">Option 2</option>
+                    <option value="3">Option 3</option>
+                </select>
             </div>
         </div>
 
-        <!-- Recipe category -->
+        <!-- Recipe name -->
         <div class="row">
-            <label class="add-recipe-label" for="recipe_category">Recipe Category</label>
+            <label class="add-recipe-label" for="recipe_name">Recipe Name:</label>
             <div class="input-field col s12">
-                <input placeholder="(choose)" id="recipe_category" type="text" maxlength="40" class="validate">
+                <input placeholder="(max 40 characters)" id="recipe_name" name="recipe_name"type="text"
+                    maxlength="40" class="validate" required>
             </div>
         </div>
 
         <!-- Serves / Cooking -->
         <div class="row">
             <div class="col s6">
-                <label class="add-recipe-label" for="serves">Serves</label><br>
+                <label class="add-recipe-label" for="serves">Serves:</label><br>
                 <div class="input-field col s12">
-                    <input placeholder="(number of servings)" id="serves" type="text" pattern="[0-9]{1,2}$" class="validate">
+                    <input placeholder="(number of servings)" id="serves" name="serves" type="text"
+                        pattern="[0-9]{1,2}$" class="validate" required>
                 </div>
             </div>
             <div class="col s6">
-                <label class="add-recipe-label" for="cooking_time">Cooking Time</label><br>
+                <label class="add-recipe-label" for="cooks_in">Cooking Time:</label><br>
                 <div class="input-field col s12">
-                    <input placeholder="(minutes)" id="cooking_time" type="text" pattern="[0-9]{1,4}$" class="validate">
+                    <input placeholder="(minutes)" id="cooks_in" name="cooks_in" type="text"
+                        pattern="[0-9]{1,4}$" class="validate" required>
                 </div>
             </div>
         </div>
 
         <!-- Ingredients -->
         <div class="row">
-            <label class="add-recipe-label" for="ingredients">Ingredients</label>
+            <label class="add-recipe-label" for="ingredients">Ingredients:</label>
             <div class="input-field col s12">
-                <input placeholder="(add each ingredient on a new line)" id="ingredients" type="text" class="validate">
+                <input placeholder="(add each ingredient on a new line)" id="ingredients" name="ingredients"
+                    type="text" class="validate" required>
             </div>
         </div>
         <!-- Method -->
         <div class="row">
             <label class="add-recipe-label" for="method">Method:</label>
             <div class="input-field col s12">
-                <input placeholder="(add each step on a new line)" id="method" type="text" class="validate">
+                <input placeholder="(add each step on a new line)" id="method" name="method"
+                    type="text" class="validate" required>
             </div>
         </div>
+
+        <!-- Image -->
+        <div class="row">
+            <label class="add-recipe-label" for="image">Image:</label>
+            <div class="input-field col s12">
+                <input placeholder="(image URL)" id="image" name="image" type="text" class="validate" required>
+            </div>
+            <div class="div col s12">
+                <p>You can find licence free images on any of these websites:</p>
+                <div class="margin-top-twentyfive margin-bottom-twentyfive">
+                    <a href="https://unsplash.com" class="stock-images" target="_blank">Unsplash</a>
+                    <a href="https://imgur.com" class="stock-images" target="_blank">Imgur</a>
+                    <a href="https://pixabay.com" class="stock-images" target="_blank">Pixabay</a>
+                    <a href="https://www.pexels.com" class="stock-images" target="_blank">Pexels</a>
+                </div>
+                <p>
+                    Simply select image that feels perfect for your recipe,
+                    right click on it and select <em>“Copy image address”</em>,
+                    then paste the URL into the above field.
+                </p>
+            </div>
+        </div>
+
     </form>
   </div>
-  
+
 <!-- END OF CODE CREDIT -->
 
 {% endblock %}
