FEAT: Connect Recipe Category dropdown to MongoDB database on 'Add Recipe' page

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -12,13 +12,13 @@
 
          <!-- Recipe category -->
          <div class="row">
-            <label class="add-recipe-label" for="category_name"><i class="fas fa-folder add-recipe-icon"></i> Recipe Category:</label>
+            <label class="add-recipe-label" for="category_name"><i class="fas fa-folder-open add-recipe-icon"></i> Recipe Category:</label>
             <div class="input-field col s12">
                 <select id="category_name" name="category_name" class="validate" required>
                     <option value="" disabled selected></i> Choose Category</option>
-                    <option value="1">Option 1</option>
-                    <option value="2">Option 2</option>
-                    <option value="3">Option 3</option>
+                        {% for category in categories %}
+                        <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                        {% endfor %}
                 </select>
             </div>
         </div>
