--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -8,7 +8,7 @@
 
 <!-- Form -->
 <div class="row margin-top-seventyfive">
-    <form class="col s12 m10 offset-m1 l8 offset-l2" method="POST" action="">
+    <form class="col s12 m10 offset-m1 l8 offset-l2" method="POST" action="{{ url_for('add_recipe') }}">
 
          <!-- Recipe category -->
          <div class="row">
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <!-- Serves / Cooking -->
+        <!-- Serves / Cooks in -->
         <div class="row">
             <div class="col s6">
                 <label class="add-recipe-label" for="serves">Serves:</label><br>
@@ -58,6 +58,7 @@
                     type="text" class="validate" required>
             </div>
         </div>
+
         <!-- Method -->
         <div class="row">
             <label class="add-recipe-label" for="method">Method:</label>
@@ -87,6 +88,12 @@
                     then paste the URL into the above field.
                 </p>
             </div>
+        </div>
+
+        <!-- Submit button -->
+        <div class="row margin-top-seventyfive center-align">
+            <button type="submit" class="col s4 offset-s1 green-button-full">Save</button>
+            <button type="submit" class="col s4 offset-s1 grey-button-full">Cancel</button>
         </div>
 
     </form>
