--- a/templates/myrecipes.html
+++ b/templates/myrecipes.html
@@ -16,6 +16,19 @@
     <a href="{{ url_for('add_recipe') }}" class="col s8 offset-s2 m4 offset-m4 button-banner-signup">Add new recipe</a>
 </div>
 
-<p class="center-align margin-top-hundred">To browse all recipes <a href="{{ url_for('get_recipes') }}" class="click-here">click here.</a></p>
+<!-- Recipe Card -->
+<div class="flex-container margin-top-fifty">
+    {% for myrecipe in myrecipes %}
+        <div>
+            <a class="recipes-overlay-container" href="{{ url_for('get_recipes') }}">
+                <img class="flex-image" src="{{ myrecipe.image }}" alt="Recipe">
+                <div class="recipes-overlay"></div>
+                <div class="recipes-title">{{ myrecipe.recipe_name }}</div>
+            </a>
+        </div>
+    {% endfor %}
+ </div>
+
+ <p class="center-align margin-top-hundred">To browse all recipes <a href="{{ url_for('get_recipes') }}" class="click-here">click here.</a></p>
 
 {% endblock %}
