--- a/templates/myrecipes.html
+++ b/templates/myrecipes.html
@@ -18,6 +18,12 @@
 
 <!-- Recipe Card -->
 <div class="flex-container margin-top-fifty">
+    
+
+    <!-- {% if myrecipeslist|length == 0 %}
+    <p>You have no uploaded recipes yet</p>
+    {% endif %} -->
+
     {% for myrecipe in myrecipes %}
         <div>
             <a class="recipes-overlay-container" href="{{ url_for('get_recipes') }}">
@@ -27,6 +33,7 @@
             </a>
         </div>
     {% endfor %}
+    
  </div>
 
  <p class="center-align margin-top-hundred">To browse all recipes <a href="{{ url_for('get_recipes') }}" class="click-here">click here.</a></p>
